--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"><title>New Tab</title><style media="screen">@media (prefers-color-scheme: dark) {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"><title>New Tab</title><style media="screen">html,
+    body {
+      background-color: rgb(0, 0, 0);
+    }
+
+    @media (prefers-color-scheme: dark) {
 
       html,
       body {
